index.css
@font-face {
    font-family: Moderne;
    src: url(./Moderne-Sans-Font/Moderne\ Sans\ Font.ttf);
  }

body {
    background: #ECE9E6;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
    margin-top: 2vh;
    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
}

a {
    text-decoration: none;
    --fa-text-decoration:none;
}

nav a:link {
    color:black;
}

/* anchor tags which are being pressed/clicked */
nav a:active {
    color: black;
}

/* anchor tags which have an href which exists in the browser's history */
nav a:visited {
    color: black;
}

.navigation {
    display: flex;
    height: 5vh;
    width: 100%;
    align-items:center;
    justify-content:center;
}

.icon {
    margin: 5vw;
}

.main {
    height:94vh;
    display: flex;
    justify-content:center;
    align-items: center;
    flex-direction: column;
    color: rgb(88, 92, 99);
    text-transform: uppercase;
    font-family: Moderne;
    letter-spacing: 0.1rem;
    font-size: 1.1rem;
}

img {
    width: 96vw;
    height: 48vh;
    border-radius: 12px;
}

.name h1 {
    text-align: center;
}

.aboutnav {
    display: flex;
    align-items:center;
    justify-content:space-around;
    height: 5vh;
    width: 90%;
    margin-top: 5vh;
    margin-left: auto;
    margin-right: auto;
    position: sticky;
    top: 1.2rem;
    z-index: 999;
    box-shadow: 10 3px 15px rgb(0 0 0 / 0.2);
    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6) !important;  /* Chrome 10-25, Safari 5.1-6 */

}

.about {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex: 2;
    max-width: 80%;
    height: calc(100vh - 10vh);
    margin: 1rem auto;
    z-index: 1;
}

.aboutpara {
    text-align: justify;
}

